fix(grid): Switch dirty cell overflow to visible

--- a/packages/default/scss/grid/_layout.scss
+++ b/packages/default/scss/grid/_layout.scss
@@ -648,7 +648,7 @@
         }
 
         .k-dirty-cell {
-            position: static;
+            overflow: visible;
         }
     }
 
